crates/sourcepawn-studio/tests/text_document/hover/snapshots/main__text_document__hover__macros__macro_1.snap
---
source: crates/sourcepawn-studio/tests/text_document/hover/macros.rs
assertion_line: 6
expression: "hover(r#\"\n%! main.sp\n#define FOO\nFOO\n |\n ^\n\"#)"
---
{
  "contents": {
    "kind": "markdown",
    "value": "```sourcepawn\n#define FOO\n```\nExpands to:\n```sourcepawn\n\n```"
  },
  "range": {
    "start": {
      "line": 1,
      "character": 0
    },
    "end": {
      "line": 1,
      "character": 3
    }
  },
  "actions": []
}
