crates/sourcepawn-studio/tests/text_document/hover/snapshots/main__text_document__hover__macros__macro_10.snap
---
source: crates/sourcepawn-studio/tests/text_document/hover/macros.rs
assertion_line: 135
expression: "hover(r#\"\n%! main.sp\n#define FOO  \"foo\"\nchar foo[10] = FOO;\n                |\n                ^\n\"#)"
---
{
  "contents": {
    "kind": "markdown",
    "value": "```sourcepawn\n#define FOO  \"foo\"\n```\nExpands to:\n```sourcepawn\n\"foo\"\n```"
  },
  "range": {
    "start": {
      "line": 1,
      "character": 15
    },
    "end": {
      "line": 1,
      "character": 18
    }
  },
  "actions": []
}
