crates/sourcepawn-studio/tests/text_document/hover/snapshots/main__text_document__hover__macros__macro_3.snap
---
source: crates/sourcepawn-studio/tests/text_document/hover/macros.rs
assertion_line: 32
expression: "hover(r#\"\n%! main.sp\n#define FOO(%1) %1 + %1\nint foo;\nint bar = FOO(foo);\n           |\n           ^\n\"#)"
---
{
  "contents": {
    "kind": "markdown",
    "value": "```sourcepawn\n#define FOO(%1) %1 + %1\n```\nExpands to:\n```sourcepawn\nfoo + foo\n```"
  },
  "range": {
    "start": {
      "line": 2,
      "character": 10
    },
    "end": {
      "line": 2,
      "character": 13
    }
  },
  "actions": []
}
