crates/sourcepawn-studio/tests/text_document/hover/snapshots/main__text_document__hover__macros__macro_5.snap
---
source: crates/sourcepawn-studio/tests/text_document/hover/macros.rs
assertion_line: 59
expression: "hover(r#\"\n%! main.sp\n#define FOO(%1) %1 + %1\nint foo;\nint bar = FOO(foo) + FOO(foo);\n                      |\n                      ^\n\"#)"
---
{
  "contents": {
    "kind": "markdown",
    "value": "```sourcepawn\n#define FOO(%1) %1 + %1\n```\nExpands to:\n```sourcepawn\nfoo + foo\n```"
  },
  "range": {
    "start": {
      "line": 2,
      "character": 21
    },
    "end": {
      "line": 2,
      "character": 24
    }
  },
  "actions": []
}
