crates/sourcepawn-studio/tests/text_document/hover/snapshots/main__text_document__hover__macros__macro_9.snap
---
source: crates/sourcepawn-studio/tests/text_document/hover/macros.rs
assertion_line: 120
expression: "hover(r#\"\n%! main.sp\nenum Bar {Bar1}\n#define FOO view_as<Bar>( 1 )\n#define BAR                     FOO\nBar bar = BAR;\n           |\n           ^\n\"#)"
---
{
  "contents": {
    "kind": "markdown",
    "value": "```sourcepawn\n#define BAR                     FOO\n```\nExpands to:\n```sourcepawn\nview_as<Bar>( 1 )\n```"
  },
  "range": {
    "start": {
      "line": 3,
      "character": 10
    },
    "end": {
      "line": 3,
      "character": 13
    }
  },
  "actions": []
}
